force-app/main/default/objects/Job_Posting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job_Postings</relationshipLabel>
    <relationshipName>Job_Postings</relationshipName>
    <type>Lookup</type>
</CustomField>