force-app/main/default/objects/Job_Posting__c/fields/Active_Rules_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Rules_Count__c</fullName>
    <label>Active_Rules_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>