force-app/main/default/objects/Job_Posting__c/fields/Auto_Route_Approved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Route_Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto_Route_Approved</label>
    <type>Checkbox</type>
</CustomField>