force-app/main/default/objects/Job_Posting__c/fields/Average_Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Pass_Rate__c</fullName>
    <label>Average_Pass_Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>