force-app/main/default/objects/Job_Posting__c/fields/Candidates_Screened__c.field-meta.xml
<CustomField>
    <fullName>Candidates_Screened__c</fullName>
    <label>Candidates_Screened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>