force-app/main/default/objects/Job_Posting__c/fields/Company_Brief_Info__c.field-meta.xml
<CustomField>
    <fullName>Company_Brief_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Brief Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>