force-app/main/default/objects/Job_Posting__c/fields/Credentialing_Required__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Credentialing Required</label>
    <type>Checkbox</type>
</CustomField>