force-app/main/default/objects/Job_Posting__c/fields/Default_Journey_Path__c.field-meta.xml
<CustomField>
    <fullName>Default_Journey_Path__c</fullName>
    <label>Default_Journey_Path</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doctor Path</fullName>
            </value>
            <value>
                <fullName>Nurse Path</fullName>
            </value>
            <value>
                <fullName>Admin Path</fullName>
            </value>
            <value>
                <fullName>Tech Path</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>