force-app/main/default/objects/Job_Posting__c/fields/Enable_Screening__c.field-meta.xml
<CustomField>
    <fullName>Enable_Screening__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable_Screening</label>
    <type>Checkbox</type>
</CustomField>