force-app/main/default/objects/Job_Posting__c/fields/Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Experience_Level__c</fullName>
    <label>Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry Level</fullName>
            </value>
            <value>
                <fullName>Mid-Level</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>