force-app/main/default/objects/Job_Posting__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facility Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>