force-app/main/default/objects/Job_Posting__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <formula>IF(
  AND(
    TODAY() &gt;= Start_Date__c,
    TODAY() &lt;= End_Date__c
  ),
  &quot;Open&quot;,
  &quot;Closed&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Status</label>
    <type>Text</type>
</CustomField>