force-app/main/default/objects/Job_Posting__c/fields/Max_Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>Max_Experience_Years__c</fullName>
    <label>Max Experience (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>