force-app/main/default/objects/Job_Posting__c/fields/Min_Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>Min_Experience_Years__c</fullName>
    <label>Min Experience (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>