force-app/main/default/objects/Job_Posting__c/fields/Privilege_Scope__c.field-meta.xml
<CustomField>
    <fullName>Privilege_Scope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privilege Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>