force-app/main/default/objects/Job_Posting__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qualifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>