force-app/main/default/objects/Job_Posting__c/fields/Required_Education__c.field-meta.xml
<CustomField>
    <fullName>Required_Education__c</fullName>
    <description>Educational qualifications required for this position</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter required degrees, certifications, or educational background (e.g., &quot;MD from accredited medical school&quot;, &quot;Board Certification in Internal Medicine&quot;)</inlineHelpText>
    <label>Required Education</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>