force-app/main/default/objects/Job_Posting__c/fields/Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>Required_Skills__c</fullName>
    <description>Clinical and technical skills required for this position</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter required clinical skills, procedures, and competencies (e.g., &quot;Advanced Cardiac Life Support (ACLS)&quot;, &quot;Electronic Medical Records (EMR) proficiency&quot;)</inlineHelpText>
    <label>Required Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>