force-app/main/default/objects/Job_Posting__c/fields/Screening_Pass_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Screening_Pass_Threshold__c</fullName>
    <defaultValue>80</defaultValue>
    <label>Screening_Pass_Threshold</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>