force-app/main/default/objects/Job_Posting__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Psychiatrist</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>General Nurse</fullName>
            </value>
            <value>
                <fullName>Radiologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>