force-app/main/default/objects/Job_Posting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Category__c</columns>
    <columns>Role_Type__c</columns>
    <columns>Min_Experience_Years__c</columns>
    <columns>Max_Experience_Years__c</columns>
    <columns>Department__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Number_of_Positions__c</columns>
    <columns>Location__c</columns>
    <columns>Job_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>